--- a/bin/application/Viewfxml/application.css
+++ b/bin/application/Viewfxml/application.css
@@ -1,1 +1,7 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+
+.state {
+  /* -fx-background-color: #f8f9fa; */
+  -fx-border-color: black;
+  -fx-border-width: 1px;
+}
