--- a/src/application/Viewfxml/ajouter_rdv.fxml
+++ b/src/application/Viewfxml/ajouter_rdv.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.MenuItem?>
@@ -62,14 +61,10 @@
                      </font>
                   </Button>
                </children></Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
-               <children>
-                  <TextField fx:id="service_field" layoutX="108.0" layoutY="22.0" prefWidth="250.0" promptText="Service" />
-               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
                   <Line endX="100.0" layoutX="465.0" layoutY="100.0" rotate="90.0" scaleX="2.2" startX="-100.0" />
-                  <DatePicker fx:id="date_fin_rdv" layoutX="108.0" layoutY="21.0" onAction="#date" prefWidth="250.0" promptText="date fin" />
+                  <DatePicker fx:id="date_fin_rdv" layoutX="108.0" layoutY="22.0" onAction="#date" prefWidth="250.0" promptText="date fin" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
@@ -115,7 +110,6 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <Line endX="100.0" layoutX="298.0" layoutY="67.0" startX="-245.0" />
-                  <ChoiceBox fx:id="service_choice" layoutX="108.0" layoutY="22.0" prefWidth="250.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -133,10 +127,15 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <DatePicker fx:id="datedebut" layoutX="104.0" layoutY="22.0" onAction="#date_dd" prefWidth="250.0" promptText="date debut" />
+                  <DatePicker fx:id="datedebut" layoutX="108.0" layoutY="22.0" onAction="#date_dd" prefWidth="250.0" promptText="date debut" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="8" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <TextField fx:id="service_field" layoutX="108.0" layoutY="22.0" prefWidth="250.0" promptText="Service" />
+               </children>
+            </Pane>
          </children>
       </GridPane>
    </children>
