--- a/src/application/Viewfxml/Rendez_vous_dashbord.fxml
+++ b/src/application/Viewfxml/Rendez_vous_dashbord.fxml
@@ -54,7 +54,7 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
-                  <Button fx:id="mod_btn" layoutX="233.0" layoutY="6.0" mnemonicParsing="false" onAction="#rdv_modifier" prefHeight="30.0" prefWidth="100.0" text="Modifier">
+                  <Button fx:id="mod_btn" layoutX="233.0" layoutY="6.0" mnemonicParsing="false" onAction="#rdv_modifier" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@btn.css" text="Modifier">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -63,7 +63,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField layoutX="202.0" layoutY="8.0" prefHeight="25.0" prefWidth="250.0" promptText="Recherche" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="search_rdv" layoutX="202.0" layoutY="8.0" prefHeight="25.0" prefWidth="250.0" promptText="Recherche" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
