--- a/src/application/Viewfxml/facture.fxml
+++ b/src/application/Viewfxml/facture.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -11,9 +12,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1200.0" prefWidth="826.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.facture">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="826.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.facture">
    <content>
-      <GridPane prefHeight="1169.0" prefWidth="826.0">
+      <GridPane fx:id="grid" prefHeight="1169.0" prefWidth="826.0" style="-fx-background-color: white;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -55,7 +56,29 @@
                   </Text>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+               <children>
+                  <Text layoutX="69.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email :">
+                     <font>
+                        <Font name="Dubai Regular" size="20.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="69.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numero :">
+                     <font>
+                        <Font name="Dubai Regular" size="20.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="144.0" layoutY="39.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MECA-TEC@outlook.com">
+                     <font>
+                        <Font name="Dubai Regular" size="20.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="152.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0555247862">
+                     <font>
+                        <Font name="Dubai Regular" size="20.0" />
+                     </font>
+                  </Text>
+               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -124,27 +147,31 @@
                   </TableView>
                   <Text layoutX="162.0" layoutY="536.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix total des pices :">
                      <font>
-                        <Font name="Dubai Regular" size="20.0" />
+                        <Font name="Dubai Regular" size="19.0" />
                      </font>
                   </Text>
                   <Text layoutX="162.0" layoutY="580.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix Total :">
                      <font>
-                        <Font name="Dubai Regular" size="20.0" />
+                        <Font name="Dubai Regular" size="19.0" />
                      </font>
                   </Text>
-                  <Text layoutX="334.0" layoutY="536.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test">
+                  <Text fx:id="parts_price" layoutX="334.0" layoutY="536.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test">
                      <font>
                         <Font name="Dubai Regular" size="20.0" />
                      </font>
                   </Text>
-                  <Text layoutX="263.0" layoutY="580.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test">
+                  <Text fx:id="prix_fact" layoutX="263.0" layoutY="580.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test">
                      <font>
                         <Font name="Dubai Regular" size="20.0" />
                      </font>
                   </Text>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Pane prefHeight="1169.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <children>
+                  <Button fx:id="btn_save" layoutX="29.0" layoutY="529.0" mnemonicParsing="false" onAction="#save" text="Sauvgarde" />
+                  <Button fx:id="btn_print" layoutX="326.0" layoutY="529.0" mnemonicParsing="false" onAction="#print" text="Imprimer" />
+               </children></Pane>
          </children>
       </GridPane>
    </content>
