--- a/bin/application/Viewfxml/Rendez_vous_dashbord.fxml
+++ b/bin/application/Viewfxml/Rendez_vous_dashbord.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -39,7 +38,10 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <ChoiceBox fx:id="table_list" layoutX="14.0" layoutY="8.0" onMouseReleased="#selected_table" prefHeight="25.0" prefWidth="220.0" />
+                  <Button fx:id="All_btn" layoutX="34.0" layoutY="2.0" mnemonicParsing="false" onAction="#All" text="All" />
+                  <Button fx:id="year_btn" layoutX="64.0" layoutY="2.0" mnemonicParsing="false" onAction="#this_year" text="This year" />
+                  <Button fx:id="month_btn" layoutX="127.0" layoutY="2.0" mnemonicParsing="false" onAction="#this_month" text="This month" />
+                  <Button fx:id="week_btn" layoutX="197.0" layoutY="2.0" mnemonicParsing="false" onAction="#this_week" text="This Week" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
