--- a/bin/application/Viewfxml/rdv_details.fxml
+++ b/bin/application/Viewfxml/rdv_details.fxml
@@ -13,6 +13,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <Pane fx:id="rdv_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Rdv_details">
@@ -50,7 +51,7 @@
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <Button fx:id="parts_rdv" layoutX="224.0" layoutY="24.0" mnemonicParsing="false" onAction="#add_parts_rdv" prefHeight="30.0" prefWidth="60.0" text="Piece" />
+                  <Button fx:id="parts_rdv" layoutX="224.0" layoutY="24.0" mnemonicParsing="false" onAction="#add_parts_rdv" prefHeight="30.0" prefWidth="60.0" styleClass="btn_mod" stylesheets="@btn.css" text="Piece" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
@@ -123,14 +124,28 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
                <children>
-                  <Button fx:id="supp_btn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#supp" prefHeight="30.0" prefWidth="100.0" text="Supprimer" />
+                  <Button fx:id="supp_btn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#supp" prefHeight="30.0" prefWidth="100.0" styleClass="btn_delet" stylesheets="@btn.css" text="Supprimer">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="btn_finish" layoutX="55.0" layoutY="19.0" mnemonicParsing="false" onAction="#finish" prefHeight="30.0" prefWidth="100.0" styleClass="btn_terminer" stylesheets="@btn.css" text="Terminer">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Pane prefHeight="0.0" prefWidth="310.0" GridPane.columnIndex="2" GridPane.rowIndex="8">
                <children>
-                  <Button fx:id="fact_tbn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#factur" prefHeight="30.0" prefWidth="100.0" text="facture" />
-                  <Button fx:id="eng_btn" layoutX="14.0" layoutY="19.0" mnemonicParsing="false" onAction="#enregistre" prefHeight="30.0" prefWidth="100.0" text="Enregistre" />
+                  <Button fx:id="fact_tbn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#factur" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@btn.css" text="facture">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="eng_btn" layoutX="14.0" layoutY="19.0" mnemonicParsing="false" onAction="#enregistre" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@btn.css" text="Enregistre">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
                </children>
             </Pane>
          </children>
