--- a/bin/application/Viewfxml/Dashbord.fxml
+++ b/bin/application/Viewfxml/Dashbord.fxml
@@ -46,7 +46,17 @@
                <padding>
                   <Insets left="30.0" />
                </padding></Button>
-            <VBox alignment="BOTTOM_LEFT" prefHeight="155.0" prefWidth="100.0">
+            <Button id="btn1" fx:id="btn_car" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#car" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Vehicles" textFill="#9c9c9c">
+               <padding>
+                  <Insets left="30.0" />
+               </padding>
+            </Button>
+            <Button id="btn1" fx:id="btn_stats" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#stats" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Statistics" textFill="#9c9c9c">
+               <padding>
+                  <Insets left="30.0" />
+               </padding>
+            </Button>
+            <VBox alignment="BOTTOM_LEFT" prefHeight="90.0" prefWidth="170.0">
                <children>
                   <Button fx:id="btn_profile" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#profile" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Profile" textFill="#9c9c9c">
                      <padding>
