--- a/src/application/Viewfxml/rdv_details.fxml
+++ b/src/application/Viewfxml/rdv_details.fxml
@@ -39,16 +39,47 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="nom_client" editable="false" layoutX="33.0" layoutY="25.0" prefWidth="250.0" promptText="Nom" />
+                  <Text fx:id="txt_nom" layoutX="80.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="13.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Client :">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txt_prenom" layoutX="80.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
                </children></Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Pane fx:id="txt_vin" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <TextField fx:id="numero_client" editable="false" layoutX="30.0" layoutY="22.0" prefWidth="250.0" promptText="Numéro" />
+                  <Text layoutX="14.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vin :">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="14.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Matricule :">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="74.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <ChoiceBox fx:id="tech_choice" layoutX="30.0" layoutY="22.0" prefWidth="250.0" />
-               </children></Pane>
+                  <Text layoutX="14.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modele :">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="txt_matri" layoutX="111.0" layoutY="4.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                  <Text fx:id="txt_model" layoutX="99.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+               </children>
+            </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
                   <Button fx:id="parts_rdv" layoutX="224.0" layoutY="24.0" mnemonicParsing="false" onAction="#add_parts_rdv" prefHeight="30.0" prefWidth="60.0" styleClass="btn_mod" stylesheets="@btn.css" text="Piece" />
@@ -81,7 +112,16 @@
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="prenom_client" editable="false" layoutX="33.0" layoutY="23.0" prefWidth="250.0" promptText="Prenom" />
+                  <Text fx:id="txt_numero" layoutX="100.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="14.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numéro :">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
@@ -96,17 +136,17 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
-                  <TextField fx:id="car_model" layoutX="30.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Car Model" />
+                  <TextField fx:id="prix" layoutX="30.0" layoutY="22.0" prefHeight="25.0" prefWidth="250.0" promptText="Prix" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="prix" layoutX="30.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Prix" />
+                  <TextField fx:id="service" layoutX="32.0" layoutY="24.0" prefHeight="25.0" prefWidth="250.0" promptText="Type de Service" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                <children>
-                  <TextField fx:id="service" layoutX="27.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Type de Service" />
+                  <ChoiceBox fx:id="tech_choice" layoutX="30.0" layoutY="22.0" prefWidth="250.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
