--- a/bin/application/Viewfxml/car_details.fxml
+++ b/bin/application/Viewfxml/car_details.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rdv_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Car_details">
+<Pane fx:id="rdv_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1030.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Car_details">
    <children>
-      <GridPane prefHeight="600.0" prefWidth="930.0">
+      <GridPane prefHeight="700.0" prefWidth="1030.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -40,22 +40,22 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="marque" layoutX="83.0" layoutY="26.0" prefWidth="300.0" promptText="Marque" />
+                  <TextField fx:id="marque" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="Marque" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="modele" layoutX="83.0" layoutY="26.0" prefWidth="300.0" promptText="Modele" />
+                  <TextField fx:id="modele" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="Modele" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
-                  <TextField fx:id="couleur" layoutX="83.0" layoutY="26.0" prefWidth="300.0" promptText="Couleur" />
+                  <TextField fx:id="couleur" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="Couleur" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                <children>
-                  <TextField fx:id="vin" layoutX="83.0" layoutY="25.0" prefWidth="300.0" promptText="vin" />
+                  <TextField fx:id="vin" layoutX="83.0" layoutY="25.0" prefHeight="30.0" prefWidth="300.0" promptText="vin" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
@@ -68,7 +68,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TableView fx:id="car_rdv" layoutX="-8.0" layoutY="38.0" prefHeight="340.0" prefWidth="460.0">
+                  <TableView fx:id="car_rdv" layoutX="-8.0" layoutY="38.0" prefHeight="450.0" prefWidth="460.0" stylesheets="@tablestyle.css">
                     <columns>
                       <TableColumn fx:id="nom_col" prefWidth="75.0" text="Nom client" />
                       <TableColumn fx:id="prenom_col" prefWidth="64.0" text="Prenom" />
@@ -97,7 +97,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="matricule" layoutX="83.0" layoutY="26.0" prefWidth="300.0" promptText="matricule" />
+                  <TextField fx:id="matricule" layoutX="83.0" layoutY="26.0" prefHeight="30.0" prefWidth="300.0" promptText="matricule" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
          </children>
