--- a/bin/application/Viewfxml/parts_dashbord.fxml
+++ b/bin/application/Viewfxml/parts_dashbord.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -16,14 +19,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.parts_dashbord_controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1030.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.parts_dashbord_controller">
 
    <bottom>
-      <HBox alignment="CENTER" prefHeight="390.0" prefWidth="930.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="526.0" prefWidth="1030.0" BorderPane.alignment="CENTER">
          <children>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="850.0" style="-fx-border-width: 0; -fx-border-color: transparent; -fx-background-color: transparent;">
                <children>
-                  <TableView fx:id="parts_table" prefHeight="390.0" prefWidth="853.0" stylesheets="@tablestyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="parts_table" layoutY="1.0" prefHeight="390.0" prefWidth="850.0" stylesheets="@tablestyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                         <TableColumn fx:id="id" minWidth="-Infinity" prefWidth="65.0" resizable="false" text="Id" />
                       <TableColumn fx:id="nom_col" minWidth="200.0" prefWidth="204.0" text="Nom" />
@@ -42,7 +45,7 @@
       </HBox>
    </bottom>
    <top>
-      <GridPane prefHeight="200.0" prefWidth="930.0" BorderPane.alignment="CENTER">
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="242.0" prefWidth="1030.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -51,12 +54,13 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <children>
                   <Button fx:id="annl_btn" layoutX="124.0" layoutY="19.0" mnemonicParsing="false" onAction="#annl_mod" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Annuler">
                      <font>
@@ -64,11 +68,7 @@
                      </font>
                   </Button>
                </children></Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <children>
-                  <TextField fx:id="price" layoutX="16.0" layoutY="20.0" prefWidth="200.0" promptText="Prix" styleClass="inpt" stylesheets="@inputs.css" />
-               </children>
-            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
             <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
                   <Text layoutX="14.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Parts">
@@ -78,34 +78,27 @@
                   </Text>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
                   <TextField fx:id="reserch_field" layoutX="43.0" layoutY="18.0" prefHeight="27.0" prefWidth="200.0" promptText="Recherche" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="name" layoutX="17.0" layoutY="20.0" onInputMethodTextChanged="#name_field" prefWidth="200.0" promptText="Nom" style="-fx-background-radius: 10px;" styleClass="inpt" stylesheets="@inputs.css">
-                     <effect>
-                        <DropShadow>
-                           <color>
-                              <Color red="0.8684210777282715" green="0.8684210777282715" blue="0.8684210777282715" />
-                           </color>
-                        </DropShadow>
-                     </effect></TextField>
+                  <TextField fx:id="quntitie" layoutX="4.0" layoutY="15.0" prefWidth="220.0" promptText="Quantité" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="description" layoutX="17.0" layoutY="20.0" prefHeight="27.0" prefWidth="200.0" promptText="description " styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="prixdachat" layoutX="4.0" layoutY="15.0" promptText="Prix D'Achat" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="quntitie" layoutX="16.0" layoutY="20.0" prefWidth="200.0" promptText="Quantité" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="price" layoutX="4.0" layoutY="15.0" prefWidth="220.0" promptText="Prix" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <children>
                   <Button fx:id="add_btn" layoutX="124.0" layoutY="19.0" mnemonicParsing="false" onAction="#add_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@part_style.css" text="Ajouter">
                      <font>
@@ -119,7 +112,42 @@
                   </Button>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <TextField fx:id="name" layoutX="4.0" layoutY="15.0" onInputMethodTextChanged="#name_field" prefHeight="30.0" prefWidth="220.0" promptText="Nom" style="-fx-background-radius: 10px;" styleClass="inpt" stylesheets="@inputs.css">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color red="0.8684210777282715" green="0.8684210777282715" blue="0.8684210777282715" />
+                           </color>
+                        </DropShadow>
+                     </effect></TextField>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <TextField fx:id="description" layoutX="4.0" layoutY="15.0" prefHeight="27.0" prefWidth="220.0" promptText="description " styleClass="inpt" stylesheets="@inputs.css" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <children>
+                  <DatePicker fx:id="date" layoutX="4.0" layoutY="15.0" styleClass="inpt" stylesheets="@inputs.css" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
+               <children>
+                  <TextField fx:id="fournisseur" layoutX="4.0" layoutY="15.0" prefHeight="25.0" prefWidth="199.0" promptText="Fournisseur" styleClass="inpt" stylesheets="@inputs.css">
+                     <contextMenu>
+                        <ContextMenu fx:id="list_fornisseur">
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                          </items>
+                        </ContextMenu>
+                     </contextMenu>
+                  </TextField>
+               </children>
+            </Pane>
          </children>
       </GridPane>
    </top>
