--- a/src/application/Viewfxml/Rdv_parts.fxml
+++ b/src/application/Viewfxml/Rdv_parts.fxml
@@ -13,14 +13,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="rdv_parts_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Rdv_parts">
+<BorderPane fx:id="rdv_parts_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1030.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Rdv_parts">
 
    <bottom>
-      <HBox alignment="CENTER" prefHeight="494.0" prefWidth="930.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="687.0" prefWidth="1030.0" BorderPane.alignment="CENTER">
          <children>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="850.0" style="-fx-border-width: 0; -fx-border-color: transparent; -fx-background-color: transparent;">
                <children>
-                  <TableView fx:id="parts_table" prefHeight="390.0" prefWidth="853.0" stylesheets="@tablestyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="parts_table" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="390.0" prefWidth="853.0" stylesheets="@tablestyle.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columns>
                         <TableColumn fx:id="id" minWidth="-Infinity" prefWidth="65.0" resizable="false" text="Id" />
                       <TableColumn fx:id="nom_col" minWidth="200.0" prefWidth="204.0" text="Nom" />
@@ -39,7 +39,7 @@
       </HBox>
    </bottom>
    <top>
-      <GridPane prefHeight="150.0" prefWidth="930.0" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="216.0" prefWidth="1030.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -56,7 +56,7 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <children>
-                  <Button fx:id="btn_conferm" layoutX="117.0" layoutY="10.0" mnemonicParsing="false" onAction="#conferm" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@part_style.css" text="Confermier">
+                  <Button fx:id="btn_conferm" layoutX="144.0" layoutY="29.0" mnemonicParsing="false" onAction="#conferm" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@part_style.css" text="Confermier">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -66,7 +66,7 @@
             <Pane prefHeight="200.0" prefWidth="200.0" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="reserch_field" layoutX="34.0" layoutY="12.0" prefHeight="27.0" prefWidth="200.0" promptText="Recherche" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="reserch_field" layoutX="14.0" layoutY="21.0" prefHeight="30.0" prefWidth="300.0" promptText="Recherche" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
@@ -74,12 +74,12 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <children>
-                  <Button fx:id="add_btn" layoutX="120.0" layoutY="10.0" mnemonicParsing="false" onAction="#add_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@part_style.css" text="Ajouter">
+                  <Button fx:id="add_btn" layoutX="144.0" layoutY="21.0" mnemonicParsing="false" onAction="#add_parts" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@part_style.css" text="Ajouter">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="annl_btn" layoutY="9.0" mnemonicParsing="false" onAction="#annl_mod" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Annuler">
+                  <Button fx:id="annl_btn" layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#annl_mod" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@part_style.css" text="Annuler">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -88,8 +88,9 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="quntitie" layoutX="17.0" layoutY="12.0" prefWidth="200.0" promptText="Quantité" styleClass="inpt" stylesheets="@inputs.css" />
-               </children></Pane>
+                  <TextField fx:id="quntitie" layoutX="94.0" layoutY="21.0" prefHeight="30.0" prefWidth="300.0" promptText="Quantité" styleClass="inpt" stylesheets="@inputs.css" />
+               </children>
+            </Pane>
          </children>
       </GridPane>
    </top>
