--- a/src/application/Viewfxml/rdv_details.fxml
+++ b/src/application/Viewfxml/rdv_details.fxml
@@ -13,12 +13,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane fx:id="rdv_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Rdv_details">
+<Pane fx:id="rdv_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1030.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Rdv_details">
    <children>
-      <GridPane prefHeight="600.0" prefWidth="930.0">
+      <GridPane prefHeight="700.0" prefWidth="1030.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -39,65 +40,94 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Text fx:id="txt_nom" layoutX="80.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                  <Text fx:id="txt_nom" layoutX="160.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                      <font>
-                        <Font size="18.0" />
+                        <Font size="16.0" />
                      </font>
                   </Text>
-                  <Text layoutX="13.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Client :">
+                  <Text layoutX="8.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Client">
                      <font>
-                        <Font size="18.0" />
+                        <Font name="System Bold" size="18.0" />
                      </font>
                   </Text>
-                  <Text fx:id="txt_prenom" layoutX="80.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                  <Text fx:id="txt_prenom" layoutX="160.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                      <font>
-                        <Font size="18.0" />
+                        <Font size="16.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="85.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prenom :">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Text>
+                  <Text layoutX="85.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom :">
+                     <font>
+                        <Font size="16.0" />
                      </font>
                   </Text>
                </children></Pane>
-            <Pane fx:id="txt_vin" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <Text layoutX="14.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vin :">
+                  <Text fx:id="txt_vin" layoutX="140.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                      <font>
-                        <Font size="18.0" />
+                        <Font size="16.0" />
+                     </font></Text>
+                  <Text layoutX="8.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vehicule">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
                      </font>
                   </Text>
-                  <Text layoutX="14.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Matricule :">
+                  <Text layoutX="95.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Vin :">
                      <font>
-                        <Font size="18.0" />
+                        <Font size="16.0" />
                      </font>
                   </Text>
-                  <Text layoutX="74.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                  <Line endX="280.0" layoutX="30.0" startX="-30.0" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <Text layoutX="14.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modele :">
+                  <Text layoutX="95.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modele :">
                      <font>
-                        <Font size="18.0" />
+                        <Font size="16.0" />
                      </font>
                   </Text>
-                  <Text fx:id="txt_matri" layoutX="111.0" layoutY="4.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-                  <Text fx:id="txt_model" layoutX="99.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                  <Text fx:id="txt_matri" layoutX="178.0" layoutY="14.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Text>
+                  <Text fx:id="txt_model" layoutX="163.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Text>
+                  <Line endX="211.0" layoutX="99.0" layoutY="67.0" startX="-99.0" />
+                  <Text layoutX="95.0" layoutY="15.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Matricule :">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Text>
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <Button fx:id="parts_rdv" layoutX="224.0" layoutY="24.0" mnemonicParsing="false" onAction="#add_parts_rdv" prefHeight="30.0" prefWidth="60.0" styleClass="btn_mod" stylesheets="@btn.css" text="Piece" />
+                  <Button fx:id="parts_rdv" layoutX="238.0" layoutY="49.0" mnemonicParsing="false" onAction="#add_parts_rdv" prefHeight="30.0" prefWidth="60.0" styleClass="btn_mod" stylesheets="@btn.css" text="Piece" />
                </children></Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Pane prefHeight="68.0" prefWidth="679.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
-                  <TableView fx:id="listview_part" layoutX="-284.0" layoutY="-67.0" prefHeight="139.0" prefWidth="572.0">
+                  <TableView fx:id="listview_part" layoutX="-298.0" layoutY="9.0" prefHeight="195.0" prefWidth="596.0">
                     <columns>
                       <TableColumn fx:id="nom_part_col" minWidth="105.5999755859375" prefWidth="351.1999816894531" text="Nom" />
-                        <TableColumn fx:id="prix_col" minWidth="40.79998779296875" prefWidth="76.0" text="Prix" />
-                      <TableColumn fx:id="quantite_part_col" minWidth="47.0" prefWidth="69.0" text="Quantité " />
-                        <TableColumn fx:id="action_col" minWidth="40.0" prefWidth="72.0" text="Action" />
+                        <TableColumn fx:id="prix_col" minWidth="40.79998779296875" prefWidth="111.0" text="Prix" />
+                      <TableColumn fx:id="quantite_part_col" minWidth="47.0" prefWidth="77.0" text="Quantité " />
+                        <TableColumn fx:id="action_col" minWidth="40.0" prefWidth="54.0" text="Action" />
                     </columns>
                   </TableView>
                </children></Pane>
+            <Pane prefHeight="68.0" prefWidth="679.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <Pane prefHeight="62.0" prefWidth="310.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+               <children>
+                  <Text layoutX="20.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description out" />
+               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <children>
                   <TextArea fx:id="description_out" layoutX="20.0" layoutY="-7.0" prefHeight="150.0" prefWidth="270.0" promptText="Out" />
@@ -112,14 +142,14 @@
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <Text fx:id="txt_numero" layoutX="100.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                  <Text fx:id="txt_numero" layoutX="160.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
                      <font>
-                        <Font size="18.0" />
+                        <Font size="16.0" />
                      </font>
                   </Text>
-                  <Text layoutX="14.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numéro :">
+                  <Text layoutX="85.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numéro :">
                      <font>
-                        <Font size="18.0" />
+                        <Font size="16.0" />
                      </font>
                   </Text>
                </children>
@@ -127,26 +157,31 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
                   <DatePicker fx:id="date_debut_rdv" layoutX="30.0" layoutY="22.0" prefWidth="250.0" promptText="date debut" />
+                  <Text layoutX="30.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Debut" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
                   <DatePicker fx:id="date_fin_rdv" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="date fin" />
+                  <Text layoutX="30.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Fin" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3">
                <children>
                   <TextField fx:id="prix" layoutX="30.0" layoutY="22.0" prefHeight="25.0" prefWidth="250.0" promptText="Prix" />
+                  <Text layoutX="30.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prix" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4">
                <children>
                   <TextField fx:id="service" layoutX="32.0" layoutY="24.0" prefHeight="25.0" prefWidth="250.0" promptText="Type de Service" />
+                  <Text layoutX="32.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Service" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                <children>
                   <ChoiceBox fx:id="tech_choice" layoutX="30.0" layoutY="22.0" prefWidth="250.0" />
+                  <Text layoutX="30.0" layoutY="19.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Technicine" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
@@ -156,7 +191,10 @@
                <children>
                   <HBox fx:id="etat_box" alignment="CENTER" layoutX="14.0" layoutY="19.0" prefHeight="30.0" prefWidth="150.0" styleClass="state" stylesheets="@application.css">
                      <children>
-                        <Text fx:id="etat_label" strokeType="OUTSIDE" strokeWidth="0.0" text="etat" />
+                        <Text fx:id="etat_label" strokeType="OUTSIDE" strokeWidth="0.0" text="etat">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font></Text>
                      </children>
                   </HBox>
                   <CheckBox fx:id="check_modifier" layoutX="14.0" layoutY="60.0" mnemonicParsing="false" onAction="#modifier" text="Modifier" />
@@ -175,14 +213,17 @@
                   </Button>
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <children>
+                  <Text layoutX="21.0" layoutY="13.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description in" />
+               </children></Pane>
             <Pane prefHeight="0.0" prefWidth="310.0" GridPane.columnIndex="2" GridPane.rowIndex="8">
                <children>
-                  <Button fx:id="fact_tbn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#factur" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@btn.css" text="facture">
+                  <Button fx:id="fact_tbn" layoutX="182.0" layoutY="20.0" mnemonicParsing="false" onAction="#factur" prefHeight="30.0" prefWidth="100.0" styleClass="btn_mod" stylesheets="@btn.css" text="facture">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
-                  <Button fx:id="eng_btn" layoutX="14.0" layoutY="19.0" mnemonicParsing="false" onAction="#enregistre" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@btn.css" text="Enregistre">
+                  <Button fx:id="eng_btn" layoutX="33.0" layoutY="20.0" mnemonicParsing="false" onAction="#enregistre" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@btn.css" text="Enregistre">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Button>
